force-app/main/default/objects/MUSW__Application2__c/fields/Alternate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Address__c</fullName>
    <label>Alternate Email Address</label>
    <required>true</required>
    <type>Email</type>
    </CustomField>