force-app/main/default/objects/MUSW__Application2__c/fields/Application_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_Date__c</fullName>
    <label>Application Completed Date</label>
    <required>true</required>
    <type>Date</type>
    </CustomField>