force-app/main/default/objects/MUSW__Application2__c/fields/Bond_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Bond_Expiration_Date__c</fullName>
    <label>Bond Expiration Date</label>
    <required>true</required>
    <type>Date</type>
    </CustomField>