force-app/main/default/objects/MUSW__Application2__c/fields/Bond_Number__c.field-meta.xml
<CustomField>
    <fullName>Bond_Number__c</fullName>
    <label>Bond Number</label>
    <required>true</required>
    <type>Text</type>
    <length>30</length>
    </CustomField>