force-app/main/default/objects/MUSW__Application2__c/fields/Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Number__c</fullName>
    <label>Business Phone Number</label>
    <required>true</required>
    <type>Phone</type>
    </CustomField>