force-app/main/default/objects/MUSW__Application2__c/fields/Business_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Business_Telephone__c</fullName>
    <label>Business Telephone</label>
    <required>true</required>
    <type>Phone</type>
    </CustomField>