force-app/main/default/objects/MUSW__Application2__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Issue Date</label>
    <required>true</required>
    <type>Date</type>
    </CustomField>