force-app/main/default/objects/MUSW__Application2__c/fields/License_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Holder_Name__c</fullName>
    <label>License Holder Name</label>
    <required>true</required>
    <type>Text</type>
    <length>30</length>
    </CustomField>