force-app/main/default/objects/MUSW__Application2__c/fields/Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    </CustomField>