force-app/main/default/objects/MUSW__Application2__c/fields/State_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>State_License_Expiration_Date__c</fullName>
    <label>State License Expiration Date</label>
    <required>true</required>
    <type>Date</type>
    </CustomField>