force-app/main/default/objects/MUSW__Application2__c/fields/State_License_Number__c.field-meta.xml
<CustomField>
    <fullName>State_License_Number__c</fullName>
    <label>State License Number</label>
    <required>true</required>
    <type>Text</type>
    <length>30</length>
    </CustomField>