force-app/main/default/objects/MUSW__Application2__c/recordTypes/Permit_Application.recordType-meta.xml
<RecordType>
    <fullName>Business_License</fullName>
    <active>true</active>
    <label>Business License</label>
</RecordType>